--- a/index.html
+++ b/index.html
@@ -41,19 +41,7 @@
 
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
-            <div class="col-lg-6 px-5 text-start">
-<!--                <small><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>-->
-                <small class="ms-4"><i class="fa fa-envelope me-2"></i>info@example.com</small>
-            </div>
-            <div class="col-lg-6 px-5 text-end">
-<!--                <small>Follow us:</small>-->
-<!--                <a class="text-body ms-3" href=""><i class="fab fa-facebook-f"></i></a>-->
-<!--                <a class="text-body ms-3" href=""><i class="fab fa-twitter"></i></a>-->
-<!--                <a class="text-body ms-3" href=""><i class="fab fa-linkedin-in"></i></a>-->
-<!--                <a class="text-body ms-3" href=""><i class="fab fa-instagram"></i></a>-->
-            </div>
-        </div>
+       
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
@@ -109,8 +97,8 @@
     <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item">
-                   <div class="img1">
+                <div class="carousel-item active">
+                    <div class="img1"></div>
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
@@ -124,7 +112,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img2">
+                    <div class="img2"></div>
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
@@ -138,7 +126,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img3">
+                    <div class="img3"></div>
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
