--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="img1"></div>
-                    <div class="carousel-caption">
-                        <div class="container">
-                            <div class="row justify-content-start">
-                                <div class="col-lg-7">
-                                    <h1 class="display-2 mb-5 animated slideInDown">Natural Food Is Always Healthy</h1>
-                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
-                                    <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>
+                    <div class="carousel-caption" >
+                        <div class="container" >
+                            <div class="row justify-content-start" >
+                                <div class="col-lg-7" style="position: relative">
+                                    <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 44px;font-family: Arial;position: absolute;top: -220px;left: 750px;width: 100%;font-weight: 300" >Khí mới lưu thông</h1>
+                                    <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 44px;font-family: Arial;position: absolute;top: -170px;left: 750px;width: 100%;font-weight: 300" >Nhà tràn sức sống</h1>
+                                    <a href="" class="btn btn-primary py-sm-2" style="position: absolute;top: -110px;left: 750px;font-weight: 300;border-radius: 0;width: 150px;background-color: #fff;color: #0d6efd">Xem chi tiết</a>
+<!--                                    <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>-->
                                 </div>
                             </div>
                         </div>
@@ -116,10 +117,10 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
-                                <div class="col-lg-7">
-                                    <h1 class="display-2 mb-5 animated slideInDown">Natural Food Is Always Healthy</h1>
-                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
-                                    <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>
+                                <div class="col-lg-7" style="position: relative">
+                                    <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 44px;font-family: Arial;position: absolute;top: -220px;left: 600px;width: 100%;font-weight: 300" >Tinh khiết đến từng giọt</h1>
+                                    <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 20px;font-family: Arial;position: absolute;top: -170px;left: 600px;width: 100%;font-weight: 300" >Từ thành quả nghiên cứu toàn diện bởi các chuyên gia, Coway tự hào<br>đưa dòng nước tinh khiết đạt chuẩn quốc tế tới ngôi nhà của bạn</h1>
+                                    <a href="" class="btn btn-primary py-sm-2" style="position: absolute;top: -110px;left: 700px;font-weight: 300;border-radius: 0;width: 150px;background-color: #fff;color: #0d6efd">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
@@ -131,9 +132,9 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-7">
-                                    <h1 class="display-2 mb-5 animated slideInDown">Natural Food Is Always Healthy</h1>
-                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
-                                    <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>
+<!--                                    <h1 class="display-2 mb-5 animated slideInDown">Natural Food Is Always Healthy</h1>-->
+<!--                                    <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>-->
+<!--                                    <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>-->
                                 </div>
                             </div>
                         </div>
@@ -161,16 +162,16 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img position-relative overflow-hidden p-5 pe-0">
-                        <img class="img-fluid w-100" src="img/about.jpg">
+                        <img class="img-fluid w-100" src="img/imgcrs/6.jpg">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4">Best Organic Fruits And Vegetables</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a>
+                    <h1 class="display-5 mb-4" style="font-family: Arial">Thương hiệu Coway</h1>
+                    <p class="mb-4">Công ty công nghệ và giải pháp chăm sóc cuộc sống toàn diện. Lựa chọn thông minh cho cuộc sống hiện đại.</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>1 triệu cuộc th nghiệm</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>4.983 bằng sở hữu trí tuệ</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>370 nhà nghiên cứu</p>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="">Xem thêm</a>
                 </div>
             </div>
         </div>
@@ -182,32 +183,32 @@
     <div class="container-fluid bg-light bg-icon my-5 py-6">
         <div class="container">
             <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-5 mb-3">Our Features</h1>
-                <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                <h1 class="display-5 mb-3">Dòng sản phẩm</h1>
+<!--                <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>-->
             </div>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-1.png" alt="">
-                        <h4 class="mb-3">Natural Process</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
+            <div class="row d-flex justify-content-center">
+                <div class="bg-white col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="background-image: url(https://cdn-3464.cafe24img.com/cowayvn/img/AIR_WAVE.png);background-color: #F6F6F6;width: 400px;height: 310px;position: relative;border-radius: 8px">
+                    <div class=" text-center h-100 p-2 p-xl-5" style="background-image: url(https://cdn-3464.cafe24img.com/cowayvn/img/AIR_2.png);background-repeat: no-repeat">
+<!--                        <img class="img-fluid mb-4" src="img/icon-1.png" alt="">-->
+                        <h3 class="mb-3" style="font-family: Arial;font-weight: 400;position: absolute;top: 70px;left: 50px">Air Care</h3>
+                        <p class="mb-4" style="font-family: Arial;font-weight: 400;position: absolute;top: 105px;left: 50px;font-size: 18px">Máy lọc không khí</p>
+<!--                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>-->
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-2.png" alt="">
-                        <h4 class="mb-3">Organic Products</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
+                <div class="bg-white col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="background-image: url(https://cdn-3464.cafe24img.com/cowayvn/img/WATER_WAVE.png);background-color: #F6F6F6;width: 400px;height: 310px;position: relative;border-radius: 8px;margin-left: 16px">
+                    <div class=" text-center h-100 p-2 p-xl-5" style="background-image: url(https://cdn-3464.cafe24img.com/cowayvn/img/WATER_2.png);background-repeat: no-repeat">
+                        <!--                        <img class="img-fluid mb-4" src="img/icon-1.png" alt="">-->
+                        <h3 class="mb-3" style="font-family: Arial;font-weight: 400;position: absolute;top: 70px;left: 50px">Water Care</h3>
+                        <p class="mb-4" style="font-family: Arial;font-weight: 400;position: absolute;top: 105px;left: 50px;font-size: 18px">Máy lọc nước</p>
+                        <!--                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>-->
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-3.png" alt="">
-                        <h4 class="mb-3">Biologically Safe</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
+                <div class="bg-white col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="background-image: url(https://cdn-3464.cafe24img.com/cowayvn/img/BIDET_WAVE.png);background-color: #F6F6F6;width: 400px;height: 310px;position: relative;border-radius: 8px;margin-left: 16px">
+                    <div class=" text-center h-100 p-2 p-xl-5" style="background-image: url(https://cdn-3464.cafe24img.com/cowayvn/img/BIDET_2.png);background-repeat: no-repeat">
+                        <!--                        <img class="img-fluid mb-4" src="img/icon-1.png" alt="">-->
+                        <h3 class="mb-3" style="font-family: Arial;font-weight: 400;position: absolute;top: 70px;left: 50px">Body Care</h3>
+                        <p class="mb-4" style="font-family: Arial;font-weight: 400;position: absolute;top: 105px;left: 50px;font-size: 18px">Nắp bồn cầu thông minh</p>
+                        <!--                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>-->
                     </div>
                 </div>
             </div>
@@ -222,20 +223,20 @@
             <div class="row g-0 gx-5 align-items-end">
                 <div class="col-lg-6">
                     <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                        <h1 class="display-5 mb-3">Our Products</h1>
-                        <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                        <h1 class="display-5 mb-3">Sản phẩm</h1>
+<!--                        <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>-->
                     </div>
                 </div>
                 <div class="col-lg-6 text-start text-lg-end wow slideInRight" data-wow-delay="0.1s">
                     <ul class="nav nav-pills d-inline-flex justify-content-end mb-5">
                         <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2 active" data-bs-toggle="pill" href="#tab-1">Vegetable</a>
+                            <a class="btn btn-outline-primary border-2 active" data-bs-toggle="pill" href="#tab-1">Mới ra mắt</a>
                         </li>
                         <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-2">Fruits </a>
+                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-2">Bán chạy</a>
                         </li>
                         <li class="nav-item me-0">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-3">Fresh</a>
+                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-3">Khuyến mãi</a>
                         </li>
                     </ul>
                 </div>
@@ -246,7 +247,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-1.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/1.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -267,7 +268,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-2.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/2.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -288,7 +289,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-3.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/3.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -309,7 +310,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-4.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/4.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -330,7 +331,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-5.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/5.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -351,7 +352,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-6.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/6.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -372,7 +373,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-7.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/7.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
@@ -393,7 +394,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                             <div class="product-item">
                                 <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="img/product-8.jpg" alt="">
+                                    <img class="img-fluid w-100" src="img/products/8.png" alt="">
                                     <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                                 </div>
                                 <div class="text-center p-4">
