--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img position-relative overflow-hidden p-5 pe-0">
-                        <img class="img-fluid w-100" src="img/imgcrs/6.jpg">
+                        <img data-wow-delay="0.4s" class=" wow fadeInDown img-fluid w-100" src="img/imgcrs/6.jpg">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
