--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <div class="col-lg-7" style="position: relative">
                                     <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 44px;font-family: Arial;position: absolute;top: -220px;left: 750px;width: 100%;font-weight: 300" >Khí mới lưu thông</h1>
                                     <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 44px;font-family: Arial;position: absolute;top: -170px;left: 750px;width: 100%;font-weight: 300" >Nhà tràn sức sống</h1>
-                                    <a href="" class="btn btn-primary py-sm-2" style="position: absolute;top: -110px;left: 750px;font-weight: 300;border-radius: 0;width: 150px;background-color: #fff;color: #0d6efd">Xem chi tiết</a>
+                                    <a href="./product.html" class="btn btn-primary py-sm-2" style="position: absolute;top: -110px;left: 750px;font-weight: 300;border-radius: 0;width: 150px;background-color: #fff;color: #0d6efd">Xem chi tiết</a>
 <!--                                    <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>-->
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                                 <div class="col-lg-7" style="position: relative">
                                     <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 44px;font-family: Arial;position: absolute;top: -220px;left: 600px;width: 100%;font-weight: 300" >Tinh khiết đến từng giọt</h1>
                                     <h1 class="display-2 mb-5 animated slideInDown" style="color: white;font-size: 20px;font-family: Arial;position: absolute;top: -170px;left: 600px;width: 100%;font-weight: 300" >Từ thành quả nghiên cứu toàn diện bởi các chuyên gia, Coway tự hào<br>đưa dòng nước tinh khiết đạt chuẩn quốc tế tới ngôi nhà của bạn</h1>
-                                    <a href="" class="btn btn-primary py-sm-2" style="position: absolute;top: -110px;left: 700px;font-weight: 300;border-radius: 0;width: 150px;background-color: #fff;color: #0d6efd">Xem chi tiết</a>
+                                    <a href="./product.html" class="btn btn-primary py-sm-2" style="position: absolute;top: -110px;left: 700px;font-weight: 300;border-radius: 0;width: 150px;background-color: #fff;color: #0d6efd">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                     <p><i class="fa fa-check text-primary me-3"></i>1 triệu cuộc th nghiệm</p>
                     <p><i class="fa fa-check text-primary me-3"></i>4.983 bằng sở hữu trí tuệ</p>
                     <p><i class="fa fa-check text-primary me-3"></i>370 nhà nghiên cứu</p>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="">Xem thêm</a>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="./product.html">Xem thêm</a>
                 </div>
             </div>
         </div>
